[mai2] Fix horizontal layout problem at rating page

--- a/src/app/sega/maimai2/maimai2-songlist/maimai2-songlist.component.scss
+++ b/src/app/sega/maimai2/maimai2-songlist/maimai2-songlist.component.scss
@@ -162,8 +162,8 @@
   white-space: nowrap;
 }
 
-.badge-DX{
-  background: linear-gradient(-30deg, #fbad02 50%, #ff4427 50%);
+.badge-DX {
+  background: linear-gradient(-30deg, #fbad02, #fbad02 40%, #ff4427 60%, #ff4427);
   color: #ffffff;
   flex-shrink: 0;
   white-space: nowrap;
